unified_tests/operators/unary_not_operand_unknown_name/expect/build.text.stderr
lib.copp:2:16: error: unknown name 'missing'
      return not missing
                 ^
